--- a/src/app/main/components/profile/profile.component.css
+++ b/src/app/main/components/profile/profile.component.css
@@ -20,8 +20,9 @@
 .info-container {
   display: flex;
   flex-direction: column;
+  margin-right: 20px;
   margin-left: 20px;
-  width: 100px;
+  width: 150px;
 }
 
 .user-username {
@@ -29,12 +30,16 @@
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
 }
 
 .user-bio {
   font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
+  word-wrap: break-word;
 }
 
 .user-avatar {
@@ -54,6 +59,10 @@
 
 .subscribe-count {
   font-weight: bold;
+}
+
+.error-message {
+  text-align: center;
 }
 
 .post-container {
@@ -85,3 +94,6 @@
   align-self: center;
 }
 
+.infinite-spinner {
+  margin: 50px auto;
+}
