--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -5,7 +5,7 @@
     <mat-card-header class="post-owner-container">
       <img mat-card-avatar class="post-owner-avatar" [src]="post.user.image || 'assets/images/default-avatar.jpg'"
            alt="userAvatar">
-      <p class="post-owner" mat-card-title
+      <p class="post-owner-title" mat-card-title
          [routerLink]=" [ '/profile/', post.user.username ]">{{post.user.username}}</p>
     </mat-card-header>
 
@@ -40,12 +40,15 @@
         </label>
       </mat-form-field>
     </form>
-
   </mat-card>
+
+  <mat-spinner class="infinite-spinner" *ngIf="infiniteSpinner" [diameter]="40"></mat-spinner>
+
   <div
     infiniteScroll
     [infiniteScrollDistance]="2"
     [infiniteScrollThrottle]="1000"
+    [infiniteScrollDisabled]="infiniteScroll"
     (scrolled)="onScroll()">
   </div>
 </div>
