--- a/src/app/main/components/post-review/post-review.component.html
+++ b/src/app/main/components/post-review/post-review.component.html
@@ -4,7 +4,7 @@
   <mat-card>
     <mat-card-header class="post-owner-container">
       <img mat-card-avatar class="post-owner-avatar" [src]="postUserImage || 'assets/images/default-avatar.jpg'" alt="userAvatar">
-      <p class="post-owner" mat-card-title
+      <p class="post-owner-title" mat-card-title
          [routerLink]=" [ '/profile/', postOwner ]">{{postOwner}}</p>
     </mat-card-header>
 
