--- a/src/app/main/components/user-profile/user-profile.component.html
+++ b/src/app/main/components/user-profile/user-profile.component.html
@@ -19,13 +19,17 @@
 
       <div class="subscribe-container">
         <div class="subscribe-container">
-          <p class="subscribe-count">{{followersCount}}</p>
-          <button mat-button (click)="openFollowers()">Followers</button>
+          <button mat-button (click)="openFollowers()">
+            <a style="vertical-align: initial" class="subscribe-count">{{followersCount}}</a>
+            Followers
+          </button>
         </div>
 
         <div class="subscribe-container">
-          <p class="subscribe-count">{{followingCount}}</p>
-          <button mat-button (click)="openFollowing()">Following</button>
+          <button mat-button (click)="openFollowing()">
+            <a style="vertical-align: initial" class="subscribe-count">{{followingCount}}</a>
+            Following
+          </button>
         </div>
       </div>
 
@@ -40,10 +44,14 @@
          *ngFor="let post of posts">
     </div>
   </div>
+
+  <mat-spinner class="infinite-spinner" *ngIf="infiniteSpinner" [diameter]="40"></mat-spinner>
+
   <div
     infiniteScroll
     [infiniteScrollDistance]="2"
     [infiniteScrollThrottle]="1000"
+    [infiniteScrollDisabled]="infiniteScroll"
     (scrolled)="onScroll()">
   </div>
 </div>
