--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -21,8 +21,14 @@
         <label>
           <input type="password" matInput formControlName="password" placeholder="Enter password">
         </label>
-        <mat-error *ngIf="registrationForm.invalid && registrationForm.touched">Password can't be empty!</mat-error>
       </mat-form-field>
+      <mat-error *ngIf="registrationForm.get('password').invalid && registrationForm.get('password').touched">Password can't be empty!</mat-error>
+        <mat-form-field class="input">
+          <label>
+            <input type="password" matInput formControlName="passwordConfirm" placeholder="Confirm password">
+          </label>
+      </mat-form-field>
+      <mat-error *ngIf="registrationForm.hasError('passwordError') && registrationForm.get('passwordConfirm').touched">Passwords do not match</mat-error>
       <mat-error *ngIf="registrationError">{{registrationError}}</mat-error>
     </form>
     <div class="buttons-container">
