--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <mat-error class="error-message" *ngIf="errorMessage">{{errorMessage.error}}</mat-error>
+  <mat-error class="error-message" *ngIf="errorMessage">{{errorMessage}}</mat-error>
 
   <div class="post-container">
     <div class="post"
