--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,7 @@
         </label>
         <mat-error *ngIf="loginForm.invalid && loginForm.touched">Password can't be empty!</mat-error>
       </mat-form-field>
-      <mat-error *ngIf="loginError">{{loginError.error}}</mat-error>
+      <mat-error *ngIf="loginError">{{loginError}}</mat-error>
     </form>
     <div class="buttons-container">
       <button class="login-button" mat-raised-button color="primary" [disabled]="!loginForm.valid || loading" (click)="login()">
