update default avatar and add autocomplete

--- a/src/app/main/components/following/following.component.html
+++ b/src/app/main/components/following/following.component.html
@@ -5,7 +5,7 @@
   <div *ngFor="let profile of following">
     <div (click)="closeDialog()" [routerLink]="[ '/profile/', profile.username ]">
       <p>{{profile.username}}</p>
-      <img class="user-avatar" [src]="profile.image || 'assets/images/default-avatar.jpg'" alt="userAvatar">
+      <img class="user-avatar" [src]="profile.image || 'assets/images/default-avatar.png'" alt="userAvatar">
     </div>
   </div>
   <p *ngIf="!following.length">No following</p>
