--- a/src/app/main/components/feed/feed.component.html
+++ b/src/app/main/components/feed/feed.component.html
@@ -3,7 +3,7 @@
 <div class="feed-container" *ngIf="!spinner">
   <mat-card class="post-container" *ngFor="let post of posts">
     <mat-card-header class="post-owner-container">
-      <img mat-card-avatar class="post-owner-avatar" [src]="post.user.image || 'assets/images/default-avatar.jpg'"
+      <img mat-card-avatar class="post-owner-avatar" [src]="post.user.image || 'assets/images/default-avatar.png'"
            alt="userAvatar">
       <p class="post-owner-title" mat-card-title
          [routerLink]=" [ '/profile/', post.user.username ]">{{post.user.username}}</p>
