--- a/src/app/main/components/followers/followers.component.html
+++ b/src/app/main/components/followers/followers.component.html
@@ -5,7 +5,7 @@
   <div *ngFor="let follower of followers">
     <div (click)="closeDialog()" [routerLink]=" [ '/profile/', follower.username ]">
       <p>{{follower.username}}</p>
-      <img class="user-avatar" [src]="follower.image || 'assets/images/default-avatar.jpg'" alt="userAvatar">
+      <img class="user-avatar" [src]="follower.image || 'assets/images/default-avatar.png'" alt="userAvatar">
     </div>
   </div>
   <p *ngIf="!followers.length">No followers</p>
