--- a/src/app/main/components/search/search.component.html
+++ b/src/app/main/components/search/search.component.html
@@ -4,12 +4,23 @@
       <input matInput type="text" [formControl]="searchForm" placeholder="Search" [matAutocomplete]="auto">
     </label>
     <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let user of filteredUsersArray | async" [value]="user.username">
-        <p
-          [routerLink]="username == user.username ? ['/user-profile/' , user.username] : ['/profile/' , user.username]">
-          {{user.username}}
-        </p>
+      <mat-spinner class="spinner" *ngIf="spinner" [diameter]="40"></mat-spinner>
+      <mat-option class="user-info-container" *ngFor="let user of filteredUsersArray | async" [value]="user.username"
+                  [routerLink]="username == user.username ? ['/user-profile/' , user.username] : ['/profile/' , user.username]"
+      (click)="searchForm.setValue('')">
+        <div *ngIf="!spinner">
+          <img class="user-avatar" [src]="user.image || 'assets/images/default-avatar.png'" alt="userAvatar">
+          <span>
+            {{user.username}}
+          </span>
+        </div>
       </mat-option>
+      <mat-spinner class="spinner" *ngIf="loadMoreSpinner" [diameter]="40"></mat-spinner>
+      <div class="load-more-users-icon-container">
+        <button *ngIf="loadButton" mat-icon-button (click)="loadMoreUsers(userForSearch)">
+          <mat-icon>add_circle_outline</mat-icon>
+        </button>
+      </div>
     </mat-autocomplete>
   </mat-form-field>
 </form>
