--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.html
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.html
@@ -3,10 +3,13 @@
 <div class="profile-edit-container" *ngIf="!spinner">
   <p class="profile-edit-username">{{username}}</p>
   <form class="profile-edit-form-container" [formGroup]="profileEditForm">
-    <label>
-      <img class="user-avatar" src="{{userAvatar}}" alt="userAvatar">
-      <input type="file" formControlName="userAvatar" (change)="onImageSelected($event)">
-    </label>
+    <img class="user-avatar" src="{{userAvatar}}" alt="userAvatar">
+    <input #file type="file" formControlName="userAvatar" accept='image/*'
+           (change)="onImageSelected($event, file.files)">
+    <mat-error class="error-message" *ngIf="errorMessage">{{errorMessage}}</mat-error>
+    <div class="image-preview-container">
+      <img class="image-preview" [src]="imgURL" height="200" *ngIf="imgURL" alt="previewImage">
+    </div>
     <p>username:</p>
     <mat-form-field>
       <label>
