add logo, rename user to authUser and three post in row in profiles

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <div class="welcome-message">
-    <h1>Margatsni</h1>
-    <p>Log in to see photos and videos from your friends.</p>
+    <img class="logo" src="../../../assets/images/margatsni-logo.png" alt="margatsniLogo">
+    <p class="description">Log in to see photos and videos from your friends.</p>
   </div>
   <div>
     <form class="form-container" [formGroup]="loginForm">
