--- a/src/app/main/components/nav/nav.component.html
+++ b/src/app/main/components/nav/nav.component.html
@@ -2,5 +2,5 @@
   <img src="../../../../assets/images/home.png" class="nav-profile-icon" [routerLink]="[ '' ]" alt="home">
   <app-search class="search-input"></app-search>
   <img src="../../../../assets/images/add-photo.png" class="nav-profile-icon" [routerLink]="[ '/post-create' ]" alt="add-photo">
-  <img src="../../../../assets/images/profile.png" class="nav-profile-icon" [routerLink]="[ '/user-profile/', userUrl ]" alt="profile">
+  <img src="../../../../assets/images/profile.png" class="nav-profile-icon" [routerLink]="[ '/user-profile/', authorizedUser ]" alt="profile">
 </div>
