--- a/src/app/main/components/user-profile/user-profile.component.css
+++ b/src/app/main/components/user-profile/user-profile.component.css
@@ -68,7 +68,8 @@
 
 .post-container {
   display: flex;
-  width: 100%;
+  max-width: 970px;
+  margin: 0 auto;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
