--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -9,6 +9,19 @@
   text-align: center;
 }
 
+.logo {
+  margin: 10px auto;
+  width: 200px;
+}
+
+.description {
+  color: #696969;
+  font-weight: 600;
+  line-height: 20px;
+  font-size: 20px;
+  margin: 0 40px 20px;
+}
+
 .form-container {
   min-width: 200px;
   max-width: 500px;
@@ -44,7 +57,12 @@
 }
 
 .question-message {
+  color: #696969;
   text-align: center;
+  font-weight: 600;
+  line-height: 20px;
+  font-size: 20px;
+  margin: 10px auto;
 }
 
 @media screen and (min-width: 576px) {
