--- a/src/app/auth/registration/registration.component.css
+++ b/src/app/auth/registration/registration.component.css
@@ -33,6 +33,19 @@
   height: 50px;
 }
 
+.logo {
+  margin: 10px auto;
+  width: 200px;
+}
+
+.description {
+  color: #696969;
+  font-weight: 600;
+  line-height: 20px;
+  font-size: 20px;
+  margin: 0 40px 20px;
+}
+
 .spinner {
   margin: 0 auto;
 }
@@ -44,7 +57,12 @@
 }
 
 .question-message {
+  color: #696969;
   text-align: center;
+  font-weight: 600;
+  line-height: 20px;
+  font-size: 20px;
+  margin: 10px auto;
 }
 
 @media screen and (min-width: 576px) {
