--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="registration-container">
   <div class="welcome-message">
-    <h1>Margatsni</h1>
-    <p>Sign up to see photos and videos from your friends.</p>
+    <img class="logo" src="../../../assets/images/margatsni-logo.png" alt="margatsniLogo">
+    <p class="description">Sign up to see photos and videos from your friends.</p>
   </div>
   <div>
     <form class="form-container" [formGroup]="registrationForm">
