--- a/src/app/main/components/search/search.component.html
+++ b/src/app/main/components/search/search.component.html
@@ -6,7 +6,7 @@
     <mat-autocomplete #auto="matAutocomplete">
       <mat-spinner class="spinner" *ngIf="spinner" [diameter]="40"></mat-spinner>
       <mat-option class="user-info-container" *ngFor="let user of filteredArray | async" [value]="user.username || tagsArray[0]"
-                  [routerLink]="!tagForSearch ? (authorizedUser == user.username ? ['/user-profile/' , user.username] : ['/profile/' , user.username]) : tagsArray ? ['/tag/' , tagForSearch] : null"
+                  [routerLink]="!tagForSearch ? ([authorizedUser == user.username ? '/user-profile/' : '/profile/' , user.username]) : tagsArray ? ['/tag/' , tagForSearch] : null"
       (click)="searchForm.setValue('')">
         <div *ngIf="!spinner">
           <img *ngIf="!avatarDisable" class="user-avatar" [src]="user.image || 'assets/images/default-avatar.png'" alt="userAvatar">
