update follow dialog and add updating following count in user-profile

--- a/src/app/main/components/following/following.component.css
+++ b/src/app/main/components/following/following.component.css
@@ -6,6 +6,26 @@
   margin: auto;
 }
 
+.follow-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.following-container {
+  display: flex;
+  outline: none;
+  cursor: pointer;
+}
+
 .user-avatar {
-  width: 50px;
+  width: 40px;
+  height: 40px;
+  vertical-align: middle;
+  margin-right: 8px;
+  border-radius: 50%;
+}
+
+.subscribe-button {
+  margin-top: 8px;
+  height: 35px;
 }
