add comments editing and fix follow api model

--- a/src/app/main/components/post-review/post-review.component.html
+++ b/src/app/main/components/post-review/post-review.component.html
@@ -3,7 +3,8 @@
 <div class="post-container" *ngIf="!spinner">
   <mat-card>
     <mat-card-header class="post-owner-container">
-      <img mat-card-avatar class="post-owner-avatar" [src]="postUserImage || 'assets/images/default-avatar.png'" alt="userAvatar">
+      <img mat-card-avatar class="post-owner-avatar" [src]="postUserImage || 'assets/images/default-avatar.png'"
+           alt="userAvatar">
       <p class="post-owner-title" mat-card-title
          [routerLink]="[authorizedUser == postOwner ? '/user-profile/' : '/profile/' , postOwner ]">{{postOwner}}</p>
     </mat-card-header>
@@ -26,27 +27,46 @@
     <mat-divider style="position: initial"></mat-divider>
 
     <div class="load-more-comments-container">
-    <button class="load-more-comments-icon" mat-icon-button *ngIf="loadButton" (click)="getComments(postId, pageToLoad)">
-      <mat-icon>add_circle_outline</mat-icon>
-    </button>
+      <button class="load-more-comments-icon" mat-icon-button *ngIf="loadButton"
+              (click)="getComments(postId, pageToLoad)">
+        <mat-icon>add_circle_outline</mat-icon>
+      </button>
     </div>
 
     <div class="post-comments" *ngFor="let comment of comments">
       <div class="post-comments-info-container">
-      <p class="comment-owner"
-         [routerLink]="[authorizedUser == comment.user.username ? '/user-profile/' : '/profile/' , comment.user.username ]">{{comment.user.username}}</p>
-      <p class="comment-body">{{comment.body}}</p>
+        <p class="comment-owner"
+           [routerLink]="[authorizedUser == comment.user.username ? '/user-profile/' : '/profile/' , comment.user.username ]">{{comment.user.username}}</p>
+        <p class="comment-body" *ngIf="!comment.toggleForEdit">{{comment.body}}</p>
+
+        <div *ngIf="comment.toggleForEdit">
+          <mat-form-field class="edit-comment">
+            <label>
+              <input matInput type="text" [formControl]="inputCommentEdit" value="{{comment.body}}">
+            </label>
+          </mat-form-field>
+          <button mat-stroked-button (click)="editComment(postId, comment.id, comment)">Edit</button>
+        </div>
       </div>
-      <button class="delete-comment-icon" mat-icon-button *ngIf="authorizedUser === comment.user.username" (click)="deleteComment(postId, comment.id, comment)">
-        <mat-icon>clear</mat-icon>
-      </button>
+
+      <div>
+        <button class="update-comment-icon" mat-icon-button *ngIf="authorizedUser === comment.user.username"
+                (click)="openEditComment(comment.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+
+        <button class="delete-comment-icon" mat-icon-button *ngIf="authorizedUser === comment.user.username"
+                (click)="deleteComment(postId, comment.id, comment)">
+          <mat-icon>clear</mat-icon>
+        </button>
+      </div>
     </div>
 
     <form (ngSubmit)="addComment(postId)">
       <mat-form-field style="display: block">
-      <label>
-        <input matInput type="text" [formControl]="addCommentForm" placeholder="Add a comment">
-      </label>
+        <label>
+          <input matInput type="text" [formControl]="addCommentForm" placeholder="Add a comment">
+        </label>
       </mat-form-field>
     </form>
 
