--- a/src/app/main/components/user-post-edit/user-post-edit.component.css
+++ b/src/app/main/components/user-post-edit/user-post-edit.component.css
@@ -88,6 +88,15 @@
   text-align: center;
 }
 
+.edit-comment {
+  margin-left: 10px;
+  margin-top: -5px;
+}
+
+.update-comment-icon {
+  margin-top: 5px;
+}
+
 .delete-comment-icon {
   margin-top: 5px;
 }
