--- a/src/app/main/components/post-review/post-review.component.css
+++ b/src/app/main/components/post-review/post-review.component.css
@@ -86,6 +86,15 @@
   text-align: center;
 }
 
+.edit-comment {
+  margin-left: 10px;
+  margin-top: -5px;
+}
+
+.update-comment-icon {
+  margin-top: 5px;
+}
+
 .delete-comment-icon {
   margin-top: 5px;
 }
