--- a/src/app/main/components/feed/feed.component.css
+++ b/src/app/main/components/feed/feed.component.css
@@ -50,6 +50,19 @@
   margin-left: 8px;
 }
 
+.comment-likes-container {
+  display: flex;
+  margin-top: 17px;
+}
+
+.like-comment-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
 .post-info-container {
   display: flex;
   font-size: initial;
@@ -70,6 +83,7 @@
 
 .post-comments {
   display: flex;
+  justify-content: space-between;
   margin-top: 10px;
 }
 
