--- a/src/app/main/components/post-review/post-review.component.css
+++ b/src/app/main/components/post-review/post-review.component.css
@@ -47,6 +47,19 @@
   cursor: pointer;
 }
 
+.comment-likes-container {
+  display: flex;
+  margin-top: 17px;
+}
+
+.like-comment-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
 .post-info-container {
   display: flex;
   font-size: initial;
