--- a/src/app/main/components/user-post-edit/user-post-edit.component.css
+++ b/src/app/main/components/user-post-edit/user-post-edit.component.css
@@ -37,6 +37,19 @@
   cursor: pointer;
 }
 
+.comment-likes-container {
+  display: flex;
+  margin-top: 17px;
+}
+
+.like-comment-icon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
 .post-info-container {
   display: flex;
   justify-content: space-between;
