--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -9,7 +9,8 @@
         <label>
           <input matInput formControlName="username" placeholder="Enter username:">
         </label>
-        <mat-error *ngIf="registrationForm.invalid && registrationForm.touched">Username can't be empty!</mat-error>
+        <mat-error *ngIf="!registrationForm.get('username').value && registrationForm.get('username').touched">Username can't be empty!</mat-error>
+        <mat-error *ngIf="registrationForm.get('username').invalid && registrationForm.get('username').value">Enter please correct username!</mat-error>
       </mat-form-field>
       <mat-form-field class="input">
         <label>
